kubernetes/infrastructure/security/authentik/install/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik
  namespace: authentik
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-default-chain@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/hostname: sso.${CLUSTER_DOMAIN}
spec:
  ingressClassName: traefik
  rules:
    - host: sso.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentik
                port:
                  number: 80
